2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.

2004-08-16  Gurban M. Tewekgeli  <gmtavakkoli@yahoo.com>

	* po/tk.po: Added Turkmen translation.
	* configure.in: Add "tk" to ALL_LINGUAS

2004-08-12  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added nb to ALL_LINGUAS.

2004-06-24  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-vfs.applications: fix gvim command and name (were 
	swapped).

2004-05-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add text/x-lua for Lua scripts (Closes: #131484)

2004-05-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: Translate mime descriptions for Real Player,
	patch adapted from Takao Fujiwara <Takao.Fujiwara@Sun.COM>
	(Closes: #138615)

2004-05-04  Jody Goldberg <jody@gnome.org>

	* gnome-vfs.applications : back out all the aliases and new mime
	  types.  gnome-mime is not setup to handle aliases nicely and has not
	  branched, so there is still a string freeze.

2004-05-03  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: recognise python scripts from their headers
	(Closes: #132062)

2004-04-28  Jody Goldberg <jody@gnome.org>

	* gnome-vfs.applications : update to clarify that gnumeric supports
	  gnome-vfs

2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-22  Marco Pesenti Gritti  <marco@gnome.org>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime:

	XBEL type is now application/x-xbel, like in
	shared-mime-info

2004-03-16  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB (British) to ALL_LINGUAS

2004-03-04  Guntupalli Karunakar  <karunakar@freedomink.org>
