@@ -1,8 +1,11 @@
-AC_INIT(check-mime.pl)
-AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gnome-mime-data, 2.4.1)
+AC_INIT([gnome-mime-data], [2.4.1],
+        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-mime-data])
+AC_CONFIG_SRCDIR(check-mime.pl)
 
+AM_INIT_AUTOMAKE
+AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
+AC_SUBST(ACLOCAL_AMFLAGS, "\${ACLOCAL_FLAGS}")
 
 AC_PROG_INTLTOOL
 
@@ -11,7 +14,7 @@ GETTEXT_PACKAGE=gnome-mime-data
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
 
-AC_OUTPUT([
+AC_CONFIG_FILES([
 Makefile
 gnome-mime-data.spec
 man/Makefile
@@ -19,3 +22,5 @@ man/gnome-vfs-mime.5
 po/Makefile.in
 gnome-mime-data-2.0.pc
 ])
+
+AC_OUTPUT
