@@ -1,3 +1,12 @@
+2004-10-11  James Henstridge  <james@jamesh.id.au>
+
+	* Makefile.am: remove intltool stuff on distclean.  Remove
+	gnome-vfs.keys on clean.
+
+	* configure.in: modernise makefile a bit.
+
+	* autogen.sh (REQUIRED_AUTOMAKE_VERSION): require Automake >= 1.7.
+
 2004-08-16  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "bs" to ALL_LINGUAS.
